--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,11 @@
     background-color:rgb(243,243,243);
     font-family: "Lato", Helvetica, Arial, sans-serif;
     font-size: 14px;
+    padding: 0;
+    margin: 0;
+    
+  }
+
+  body{
+    position: relative;
   }
