--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -3,10 +3,10 @@
       <div class="card">
         <div class="row">
           <div class="col-md-4 pe-md-0">
-            <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://via.placeholder.com/219x452)' }">
+            <!-- <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://via.placeholder.com/219x452)' }">
            <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://eclectics.io/wp-content/uploads/assets/eclectics.svg)' }">
             </div>
-          </div>
+          </div> -->
           <div class="col-md-8 ps-md-0">
             <div class="auth-form-wrapper px-4 py-5">
               <a routerLink="." class="nobleui-logo d-block mb-2">Eclectics <span>Channel Manager</span></a>
