--- a/src/app/components/forgotpassword/forgotpassword.component.css
+++ b/src/app/components/forgotpassword/forgotpassword.component.css
@@ -1,9 +1,9 @@
-:host {
+/* :host {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+  } */
 
 p:before{
     color: rgb(1,97,149);
@@ -68,5 +68,5 @@ form{
 }
 
 button{
-  background-color: rgb(1,97,149);
+  background-color: rgb(64,175,137);
 }
