--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -1,12 +1,12 @@
-<div class="row w-100 mx-0 auth-page">
+<!-- <div class="row w-100 mx-0 auth-page">
     <div class="col-md-8 col-xl-6 mx-auto">
       <div class="card">
         <div class="row">
           <div class="col-md-4 pe-md-0">
-            <!-- <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://via.placeholder.com/219x452)' }">
+             <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://via.placeholder.com/219x452)' }">
            <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://eclectics.io/wp-content/uploads/assets/eclectics.svg)' }">
             </div>
-          </div> -->
+          </div> 
           <div class="col-md-8 ps-md-0">
             <div class="auth-form-wrapper px-4 py-5">
               <a routerLink="." class="nobleui-logo d-block mb-2">Eclectics <span>Channel Manager</span></a>
@@ -27,6 +27,7 @@
       </div>
     </div>
   </div>
+</div> -->
   <div class="container-fluid">
     <div class="login">
    <div class="home-logo">
@@ -60,7 +61,7 @@
          </div>
          <div class="form-group"></div>
          <div class="form-group">
-           <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+           <button type="submit" class="btn btn-primary btn-lg btn-block" ;>Login</button>
            
          </div>
        </fieldset>
