--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,7 +1,10 @@
 <!-- Navbar -->
 <div class="nav">
  <img src="assets/images/i&mbank-logo.png" alt="" height="35rem">
- 
+ <img src="assets/images/menu.jpg" alt="" height="35rem">
 </div>
+
+
+
 
   <!-- end navbar -->
