--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,22 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="container-fluid">
+    
+    <main>
+        <app-sidenav>
+                      </app-sidenav>
+    </main>
+    
+        
+         
+    
+
+
+
+ 
+    
+</div>
+
+
+
+
+
+
