--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,23 +1,21 @@
-
-.navbar{
-    background-color: #0B5ED7;
-    justify-content: start;
+/* nav{
+    height: 100%;
 }
 
-ul{
-    display: flex;
-    
+.side-nav-button{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+
 }
-i{
-   font-size: 2em;
-   background-color: #0B5ED7;
-}
-li{
-    padding: 10px 25px;
-    list-style: none;
-    font-size: large;
-    font-weight: bold;
-    background-color: #0B5ED7;
-    color: white;
-    
-}
+.side-nav-button:hover{
+    background-color: beige;
+    border-radius: 30%;
+} */
+
+.example-spacer {
+    flex: 1 1 auto;
+  }
+  
