--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,1 +1,45 @@
-<p>sidenav works!</p>
+
+
+<mat-drawer-container class="example-container" autosize>
+    <p>
+        <mat-toolbar>
+         <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <!-- <button type="button" mat-button >
+            Toggle sidenav
+          </button> -->
+        <span>My App</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+         <mat-icon>share</mat-icon>
+       </button>
+      </mat-toolbar>
+      </p>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+      <!-- <p> -->
+        <!-- <mat-list role="list"> -->
+             
+
+
+
+            <mat-list-item role="listitem">Dashboard</mat-list-item>
+            <mat-list-item role="listitem">Master</mat-list-item>
+            <mat-list-item role="listitem">Reports</mat-list-item>
+            <mat-list-item role="listitem">Administration</mat-list-item>
+            <mat-list-item role="listitem">Card </mat-list-item>
+
+           
+              
+          
+      
+     
+    </mat-drawer>
+  
+    
+  
+  </mat-drawer-container>
+  
