create sidenav and navbar

--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -1,1 +1,50 @@
-<p>forgotpassword works!</p>
+<div class="container-fluid">
+    <div class="login">
+   <div class="home-logo">
+     <img src="assets/images/I&M2b.png" class="rounded mx-auto d-block mt-2" alt="">
+   </div>
+ 
+ 
+    </div>
+     
+     <div class="text">
+     <p class="text-center ">Enter User Name</p>
+   </div>
+   <!-- form start -->
+   <div class="form">
+     <form class="form-horizontal formFadeIn ng-pristine ng-invalid ng-invalid-required" ng-hide="tgBio == true || resetPass == true ||brSelectMode==true || showForgotpasswordLink ==true" ng-submit="Login()">
+       <div style="width: 50%; text-align: center;">
+      
+       </div>
+       <fieldset>
+         <div class="form-group">
+           <div class="input-group input-group-lg" show-errors="">
+             <span class="input-group-addon"> <span class="glyphicon glyphicon-user"></span>
+             </span> <input type="text" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="UserName" ng-model="UserName" required="required" name="userName">
+           </div>
+         </div>
+        
+       
+         <div class="form-group"></div>
+         <div class="form-group">
+           <button type="submit" class="btn btn-primary btn-lg btn-block">Proceed</button>
+           
+         </div>
+       </fieldset>
+       <h2 class="text-center">Login</h2>
+       
+     </form>
+ 
+    
+ 
+     
+     
+   </div>
+   <!-- form end -->
+ 
+   
+ </div>
+  
+ 
+ 
+ 
